--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            testCoverageEnabled = true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -29,6 +32,7 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -50,5 +54,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.0.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
+    implementation "com.google.android.gms:play-services-location:15.0.1"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'com.google.guava:guava:22.0'
+    implementation 'me.kaelaela:verticalviewpager:1.0.0@aar'
 }
 apply plugin: 'com.google.gms.google-services'
