--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".ui.MenuActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.categories.add.AddCategoryActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".ui.categories.detail.CategorieDetailActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
